# RGEngine.Logging

./: CMakeLists.txt  README.md
.github/workflows/: macOs.yml  ubuntu.yml  windows.yml
RGEngine.Logging/: CMakeLists.txt  main.c
RGEngine.Logging/includes/: logger.h
RGEngine.Logging/includes/RGEngine/: logger.h
RGEngine.Logging/src/: logger.c
